# 251

./: README.md  code_review_report.md  gps.bag
catkin_ws/: GPS.bag.active
catkin_ws/devel/: .catkin
devel/include/obstacle_detector/: Obstacles.h  SegmentObstacle.h
devel/include/tricat_251/: LidarControllerConfig.h
devel/include/tricat_msgs/: Control.h  Obstacle.h  WaypointServiceResponse.h
devel/lib/myahrs_driver/: myahrs_driver
devel/lib/obstacle_detector/: scans_merger
devel/lib/pkgconfig/: ntrip_ros.pc  obstacle_detector.pc  rtcm_msgs.pc  tricat_msgs.pc  ublox_gps.pc  ublox_msg_filters.pc  ublox_msgs.pc
devel/lib/ublox_msg_filters/: example
docker/: Dockerfile  compose.yaml
src/tricat/tricat_251/: CMakeLists.txt  README.md
src/tricat/tricat_251/launch/: Straight_Contraller_test.launch  hopping_test.launch  sensor_dummy.launch  total.launch
src/tricat/tricat_251/params/: 251_params.yaml  lidar_params.yaml
src/tricat/tricat_251/src/: hopping_test.py  main_24.py  ship_24.py  ship_25.py
src/tricat/tricat_251/src/actuator/: Straight_Controller_test.py  serial_node.py
src/tricat/tricat_251/src/control/: autopilot.py
src/tricat/tricat_251/src/docking/: Docking.py  Left_Turning.py  predock.py  visualizer.py
src/tricat/tricat_251/src/guidance/: guidance.py
src/tricat/tricat_251/src/navigation/: map.py
src/tricat/tricat_251/src/sensor/: hopping_test_sensor_total.py  sensor_total.py
src/tricat/tricat_251/src/sensor/cam/: color.py
src/tricat/tricat_251/src/sensor/gps/: gnss_converter.py
src/tricat/tricat_251/src/sensor/imu/: __init__.py  heading_converter.py
src/tricat/tricat_251/src/sensor/lidar/: lidar_calc.py  lidar_clustering.py  lidar_data_generator.py
src/tricat/tricat_251/src/ship/: __init__.py  wp_manager.py
src/tricat/tricat_251/src/ship/model/: __init__.py  gnc.py  otter.py
src/tricat/tricat_251/src/test/: total_static.py
src/tricat/tricat_251/src/visual/: Lidar_clustering_visual.py  visual_hopping.py
src/tricat/tricat_251/urdf/: 241.urdf
src/tricat/tricat_msgs/: CMakeLists.txt  package.xml
src/tricat/tricat_msgs/msg/: Pose.msg  Sensor_total.msg
src/tricat/tricat_msgs/srv/: WaypointService.srv
(+182 files in other folders)
